cors/vs-petstore-cors.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      cors:
        allowHeaders:
        - Origin
        - Content-Type
        allowMethods:
        - OPTIONS
        - GET
        - POST
        allowOrigin:
        - http://localhost:8000
        exposeHeaders:
        - origin
        maxAge: 1d
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: petstore
              namespace: default
